# cmake_iar

examples/: CMakeLists.txt
